fix(options): shortcut config not visible on mobile

--- a/apps/client/src/widgets/type_widgets/options/shortcuts.css
+++ b/apps/client/src/widgets/type_widgets/options/shortcuts.css
@@ -94,6 +94,7 @@
         padding: 0;
         font-size: 0.9em;
         color: var(--main-text-color);
+        display: block !important;
     }
 
     .shortcut-chip-action,
